# snow-shot

.github/workflows/: test-build.yml
src-tauri/: Cargo.toml  tauri.windows.conf.json
src-tauri/src/: core.rs  lib.rs
src-tauri/src-crates/tauri-plugin-eco-autostart/: Cargo.toml
src-tauri/src-crates/tauri-plugin-eco-paste/: Cargo.toml
src-tauri/src-crates/tauri-plugin-eco-window/: Cargo.toml
src/components/OcrResultWindow/: index.tsx
src/components/TranslateResultWindow/: index.tsx
src/components/menuLayout/: index.tsx
src/pages/settings/ocrSettings/: index.tsx
src/pages/settings/translateSettings/: index.tsx
src/routes/_layout/settings/: ocrSettings.lazy.tsx  translateSettings.lazy.tsx
src/services/: customApiService.ts
