[package]
name = "tauri-plugin-eco-autostart"
version = "0.1.0"
authors = []
description = "EcoPaste autostart plugin"
edition = "2021"
links = "tauri-plugin-eco-autostart"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
